@@ -1,17 +1,0 @@
-package Dist::Zilla::Plugin::AlienBase;
-
-use 5.014;
-use Moose;
-
-# ABSTRACT: Use Alien::Base with Dist::Zilla
-# VERSION
-
-=head1 SYNOPSIS
-
- [AlienBase]
-
-=cut
-
-__PACKAGE__->meta->make_immutable;
-
-1;
