@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove accidentally included [AlienBase] plugin
 
 0.12      2017-03-28 12:23:48 -0400
   - Add Dist::Zilla::Plugin::AlienBase::Doc
